--- a/apps/web/templates/home/index.html.erb
+++ b/apps/web/templates/home/index.html.erb
@@ -1,1 +1,28 @@
-<h1>Pages</h1>
+<table class="uk-table uk-table-hover uk-table-divider">
+  <thead>
+    <tr>
+      <th>URL</th>
+      <th>Title</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% pages.each do |page| %>
+      <tr id="books">
+        <td><%= page.url %></td>
+        <td><%= page.title %></td>
+        <td>
+          <% if page.status == 'processed' %>
+            <span class="uk-label uk-label-success">
+              <%= page.status %>
+            </span>
+          <% else %>
+            <span class="uk-label uk-label-danger">
+              <%= page.status %>
+            </span>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
