Refactor View label

--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web</title>
+    <title>Page fetcher</title>
     <%= favicon %>
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/css/uikit.min.css" />
@@ -14,7 +14,7 @@
     <div class="uk-container uk-container-large">
       <nav class="uk-navbar-container uk-margin" uk-navbar>
         <div class="uk-navbar-left">
-          <a class="uk-navbar-item uk-logo" href="#">Pages</a>
+          <a class="uk-navbar-item uk-logo" href="#">Page fetcher</a>
         </div>
       </nav>
       <%= yield %>
