Add exception handling

--- a/apps/web/templates/home/index.html.erb
+++ b/apps/web/templates/home/index.html.erb
@@ -6,6 +6,13 @@
   </p>
 </div>
 
+<div class="uk-alert-danger uk-padding-small uk-margin-top" uk-alert>
+  <h3>Warning</h3>
+  <p>
+    Each new request will delete previous results
+  </p>
+</div>
+
 <table class="uk-table uk-table-hover uk-table-divider uk-table-justify">
   <thead>
     <tr>
