--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -10,17 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
-    <div class="uk-container uk-container-large uk-margin">
-      <nav class="uk-navbar-container">
+    <div class="uk-container uk-container-large">
+      <nav class="uk-navbar-container uk-margin">
         <div class="uk-navbar-left">
           <a class="uk-navbar-item uk-logo" href="#">Page fetcher</a>
-        </div>
-        <div class="uk-navbar-right" style="float: right">
-          <ul class="uk-navbar-nav">
-            <li>
-              <a href="https://github.com/mrkv/parsi">Github</a>
-            </li>
-          </ul>
         </div>
       </nav>
       <%= yield %>
